# TIC4303

./: Lab7ex2.diff  readme.md  some.c
Lab1/: L1-eg.c  L1-main.c  a.out  lim-A0211270Y-lab1-ex2-old.c  lim-A0211270Y-lab1-ex2.c  memusage-tutorial.html  run.sh  sim-A0211422B-lab1-ex2_20220905.c  sim-a0211422b-lab1-ex2 copy.c  sim-a0211422b-lab1-ex2.c  some.txt  sss  submission.md  test.txt  try.c
Lab2/: L2-mem-region-change-sizeofroster.c  L2-mem-region-nopie.out.txt  L2-mem-region-withoutnopie.out.txt  L2-mem-region.c  lim-A0211270Y-lab2-ex2-DRAFT.md  lim-A0211270Y-lab2-ex2-in-class.md  lim-A0211270Y-lab2-ex2.md  rr.c  submission_lab2_exercise_1.md  submission_lab2_exercise_2.md  tt.c
Lab6/: L6-function-ptr-q1.c  L6-function-ptr-q2.c  L6-function-ptr-q3.c  L6-function-ptr-q4.c  L6-function-ptr-q5  L6-function-ptr-q5.c  L6-function-ptr.c  L6-qsort-noel.c  L6-qsort.c  fptr.c  q5-firstbytechange.s
Lab6/L6-function-ptr-q5.dSYM/Contents/: Info.plist
Lab6/L6-function-ptr-q5.dSYM/Contents/Resources/DWARF/: L6-function-ptr-q5
Lab7/: L7-ex1-raw  L7-ex1-raw.c  L7-ex1.c  Lab7ex2.diff  ex2.c  ex2_final.c  ex2_final_unix.c  ex3.c  usincharpointer.c
Lab7/submission/: lim-A0211270Y-lab7-ex1.docx  lim-A0211270Y-lab7-ex2.docx
lab3/: L3-main.c  L3-util.c
lab5/failmalloc-1.0/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  THANKS  aclocal.m4  configure  configure.ac  failmalloc.c
lect12-ari/: some.c
quiz/2/: question1
scrap/: a.out  global_init_if_optimized.c  pointer_arguments.c  some.c
